--- a/play.html
+++ b/play.html
@@ -53,7 +53,7 @@
         style="max-width: 800px; padding-top: 2rem; min-height: 100vh; display: flex; flex-direction: column;">
 
         <!-- TOP HUD -->
-        <div class="flex-between"
+        <header class="flex-between"
             style="margin-bottom: 3rem; border-bottom: 1px solid var(--glass-border); padding-bottom: 1rem;">
             <div class="flex-center" style="gap: 1rem;">
                 <span id="category-badge" class="badge badge-tier-legend"
@@ -69,7 +69,7 @@
                 style="font-family: var(--font-display); font-size: 1.5rem; color: #ff4444; text-shadow: 0 0 10px rgba(255, 0, 0, 0.5); letter-spacing: 2px;">
                 LIVE
             </div>
-        </div>
+        </header>
 
         <!-- MAIN CARD -->
         <div class="card-glass"
