--- a/index.html
+++ b/index.html
@@ -47,6 +47,9 @@
                 <button id="home-guest-btn" class="btn btn-secondary" style="min-width: 180px;">
                     QUICK PLAY (GUEST)
                 </button>
+                <a href="leaderboard.html" class="btn btn-tertiary" style="min-width: 180px;">
+                    GLOBAL RANKINGS
+                </a>
             </div>
         </main>
 
