--- a/dashboard.html
+++ b/dashboard.html
@@ -94,10 +94,9 @@
                 <div class="cyber-card cyber-card-cyan" id="join-card-trigger">
                     <span class="corner-accent c-tl"></span>
                     <span class="corner-accent c-br"></span>
+                    <div class="cyber-icon-box">◈</div>
                     <div class="cyber-card-content">
-                        <img src="assets/ui/lobby_join.png"
-                            style="width: 80px; height: 80px; object-fit: contain; margin-bottom: 0.5rem; filter: drop-shadow(0 0 10px rgba(0, 243, 255, 0.5)); animation: float 6s ease-in-out infinite;">
-                        <h3 style="font-size: 1.4rem; letter-spacing: 2px;">JOIN LOBBY</h3>
+                        <h3>JOIN LOBBY</h3>
                         <p style="font-size: 0.8rem; color: rgba(255,255,255,0.7); text-transform: uppercase;">Sync with
                             squad uplink</p>
                     </div>
@@ -107,10 +106,9 @@
                 <div class="cyber-card cyber-card-pink" id="host-card-trigger">
                     <span class="corner-accent c-tl"></span>
                     <span class="corner-accent c-br"></span>
+                    <div class="cyber-icon-box">❖</div>
                     <div class="cyber-card-content">
-                        <img src="assets/ui/lobby_create.png"
-                            style="width: 80px; height: 80px; object-fit: contain; margin-bottom: 0.5rem; filter: drop-shadow(0 0 10px rgba(255, 0, 255, 0.5)); animation: float 6s ease-in-out infinite 1s;">
-                        <h3 style="font-size: 1.4rem; letter-spacing: 2px;">CREATE LOBBY</h3>
+                        <h3>CREATE LOBBY</h3>
                         <p style="font-size: 0.8rem; color: rgba(255,255,255,0.7); text-transform: uppercase;">Host
                             custom scenarios</p>
                     </div>
