--- a/index.html
+++ b/index.html
@@ -18,10 +18,12 @@
                 style="font-family: var(--font-display); font-size: 1.8rem; color: var(--gold-primary); letter-spacing: 3px;">
                 ZENOA
             </div>
-            <div>
-                <a href="login.html" class="btn btn-secondary"
-                    style="padding: 0.6rem 1.5rem; font-size: 0.8rem;">LOGIN</a>
-            </div>
+            <nav class="flex-center" style="gap: 1rem;">
+                <a href="leaderboard.html" class="btn btn-secondary"
+                    style="padding: 0.6rem 1.5rem; font-size: 0.8rem;">RANKINGS</a>
+                <a href="login.html" class="btn btn-primary"
+                    style="padding: 0.6rem 1.5rem; font-size: 0.8rem; color: #000;">LOGIN</a>
+            </nav>
         </nav>
 
         <main class="flex-center flex-col" style="min-height: 80vh; text-align: center;">
@@ -47,9 +49,6 @@
                 <button id="home-guest-btn" class="btn btn-secondary" style="min-width: 180px;">
                     QUICK PLAY (GUEST)
                 </button>
-                <a href="leaderboard.html" class="btn btn-tertiary" style="min-width: 180px;">
-                    GLOBAL RANKINGS
-                </a>
             </div>
         </main>
 
